objects/Hotal__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Secunderabad</fullName>
                </value>
                <value>
                    <fullName>Tirupathi</fullName>
                </value>
                <value>
                    <fullName>Chittoor</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Mysore</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <label>Hotal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hotal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotals</pluralLabel>
    <recordTypes>
        <fullName>International</fullName>
        <active>true</active>
        <label>International</label>
    </recordTypes>
    <recordTypes>
        <fullName>National</fullName>
        <active>true</active>
        <label>National</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>